# dec-cdl

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
cmake/: cdlConfig.cmake.in
docs/: dcl_syntax.md  shell_interface_design.md  verify_cli_parse.md  verify_cli_query_dispatch.md  verify_cli_tables.md  verify_cli_types.md  vms_cli_reference.md
examples/: CMakeLists.txt  basic_usage.cpp  file_manager.cpp  tutorial.cpp
include/cdl/: cdl.h  cli_dispatch.h  cli_get_value.h  cli_parse.h  cli_present.h  cli_tables.h  cli_types.h
src/: cli_dispatch.cpp  cli_get_value.cpp  cli_parse.cpp  cli_present.cpp  cli_tables.cpp  cli_util.cpp  cli_util.h
tests/: CMakeLists.txt  test_cli_dispatch.cpp  test_cli_get_value.cpp  test_cli_parse.cpp  test_cli_present.cpp  test_cli_tables.cpp
